# python-autotest-lesson-mobile

./: .gitignore  pyproject.toml
helpers/allure/: report.py
helpers/utils/: attach.py  utils.py
python_autotest_lesson_mobile/: components.py
tests/: conftest.py  test_python_autotest_lesson_mobile.py
