[tool.poetry]
name = "python-autotest-lesson-mobile"
version = "0.1.0"
description = ""
authors = ["Julia Ivanova <murova47@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
